# webgpu-shader-demo

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  build.sh  compile_resource_to_raw_string.sh  generate_git_version.sh  imconfig.h  main.cpp  run.sh  secure_cleanse.h  sqrt_constexpr.h
.github/workflows/: ci-build.yml
electron/webgpu-demo3/: forge.config.js  package-lock.json  package.json  webpack.renderer.config.js  webpack.rules.js
electron/webgpu-demo3/src/: .gitignore  main.js  renderer.js
gui/: clipboard.cpp  clipboard.h  gui_renderer.cpp  gui_renderer.h
html/: client.html
include/: webgpu.hpp
include/imgui/: imgui_draw.cpp  imgui_impl_emscripten.cpp  imgui_impl_emscripten.h  imgui_internal.h
render/: indirect.h  instance.h  triangle_index.h  uniforms.h  vertex.h  webgpu_renderer.cpp  webgpu_renderer.h
render/shaders/: default.wgsl  default.wgsl.h
